# cpp-doom

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake  lint-targets.cmake  lint.cmake  variables.cmake
source/: doom.cpp  doom.hpp  lib.cpp  lib.hpp  main.cpp
source/doom/: types.hpp
test/: CMakeLists.txt
test/source/: cpp-doom_test.cpp
